
* new boolean function: isValidFQDN
* fix debug_lib do imported libs added to nologfiles in oslog
* osfunc: new randomstrWithParameters (also called by randomstr
* new string function randomstrWithParameters(minLength,nLowerCases,nUpperCases,nDigits,nSpecialChars : Integer): string;
* powershellcall and execwith calls at windows RunAndCaptureOut bydefault

-- d.oertel <d.oertel@uib.de> Tue, 13 Oct 2020 15:00

opsi-winst/opsi-script (4.12.4.3) experimental; urgency=low

* macos: integrate to opsiscript and opsiscriptnogui project
  (Remove mac project files)
* new unit osstartprocess_cp (from osfunc, will be used in opsi-script-pilot)
* more logging on alldelete
* repair del -c
* try to remove dirs also with copy_delay
* new del option -r (retryOnReboot) default false (Windows only)
  If -r is set a missed delete action will be retried on Reboot.
  In this case normally a 'reboot after this script' flag will be set.
  By using the -c option setting this flag will be supressed
  The option -c (continue) make only sense in combination with -r
* section name now as header of showoutput


* startprocess_cp fix (jan werner)

-- d.oertel <d.oertel@uib.de> Wed, 23 Sep 2020 15:00


opsi-winst/opsi-script (4.12.4.2) experimental; urgency=low

* macos: try to read mountpoint from opsiclientd.conf
  default to /var/opsisetupadmin/opsi_depot

-- d.oertel <d.oertel@uib.de> Tue, 15 Sep 2020 15:00


opsi-winst/opsi-script (4.12.4.1) experimental; urgency=low

  * some more log on startup
  * oslog: makebakfiles: rename instead of copy (much faster)
  * fix uefi detection on win10 >= release 1004
  * osfuncwin: WinIsUefi: the fix is here
  //* macos: change mountpoint to /Network/opsi_depot
  //* macos: changeback mountpoint to /Volumes/opsi_depot
  * macos: change mountpoint back to /var/opsisetupadmin/opsi_depot
  * osbatchgui: formresize function disabled for Darwin

-- d.oertel <d.oertel@uib.de> Thu, 27 Aug 2020 15:00
